--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -85,13 +85,13 @@ stages:
           - task: KubernetesManifest@0
             displayName: Deploy to Kubernetes cluster
             inputs:
-              action: deploy
-              namespace: $(k8sNamespace)
+              action: 'deploy'
+              kubernetesServiceConnection: 'tractionsample-tractionsample-default-1594781404476'
+              namespace: '$(k8sNamespace)'
               manifests: |
                 $(System.ArtifactsDirectory)/manifests/deployment.yml
                 $(System.ArtifactsDirectory)/manifests/service.yml
                 $(System.ArtifactsDirectory)/manifests/ingress.yml
                 $(System.ArtifactsDirectory)/manifests/certificate.yml
-              containers: |
-                $(containerRegistry)/$(imageRepository):$(tag)
+              containers: '$(containerRegistry)/$(imageRepository):$(tag)'
     
