--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -4,6 +4,9 @@ metadata:
   name: traction-sample
 spec:
   replicas: 3
+  selector:
+    matchLabels:
+      app: traction-sample
   template:
     metadata:
       labels:
@@ -11,6 +14,7 @@ spec:
     spec:
       containers:
         - name: traction-sample
+          image: tractionsample.azurecr.io/traction-sample:latest
           ports:
             - name: http
               protocol: TCP
