--- a/manifests/ingress.yml
+++ b/manifests/ingress.yml
@@ -13,5 +13,5 @@ spec:
       paths:
       - path: /
         backend:
-          serviceName: test
+          serviceName: traction-sample
           servicePort: 80
